--- a/app/src/main/res/layout/picture_view_holder.xml
+++ b/app/src/main/res/layout/picture_view_holder.xml
@@ -5,6 +5,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/standard_padding"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="2dp"
     app:cardElevation="2dp">
 
@@ -19,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="false"
             android:layout_alignParentTop="true"
-            android:layout_gravity="center"
+            android:layout_centerInParent="true"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_cloud_off_black_48dp"
