--- a/app/src/main/res/layout-normal/picture_view_holder.xml
+++ b/app/src/main/res/layout-normal/picture_view_holder.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/standard_padding"
     android:clickable="true"
@@ -11,13 +11,13 @@
     app:cardElevation="2dp">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/picture_view_holder_image"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="false"
             android:layout_alignParentTop="true"
@@ -43,13 +43,14 @@
             android:id="@+id/picture_view_holder_date_text"
             style="@style/Base.TextAppearance.AppCompat.Body1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_below="@id/picture_view_holder_from_text"
             android:paddingBottom="@dimen/standard_padding"
             android:paddingLeft="@dimen/standard_padding"
             android:paddingRight="@dimen/standard_padding"
             android:text="@string/app_name"
             android:textColor="@color/colorPrimary" />
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
