--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,16 +7,24 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorActivatedHighlight">@color/colorAccent</item>
+        <item name="android:colorControlHighlight">@color/colorAccent</item>
 
+        <item name="android:textColorSecondary">@android:color/white</item>
+
+        <item name="android:windowActivityTransitions">true</item>
+        <item name="android:windowContentTransitions">true</item>
+
+        <item name="android:windowEnterTransition">@android:transition/slide_top</item>
+        <item name="android:windowReturnTransition">@android:transition/slide_bottom</item>
     </style>
 
-    <style name="AppTheme.SlideShowActivity" parent="AppTheme">
+    <style name="AppTheme.DarkStatusBar" parent="AppTheme">
         <item name="colorPrimary">@android:color/black</item>
         <item name="android:colorPrimary">@android:color/black</item>
         <item name="colorPrimaryDark">@android:color/black</item>
         <item name="android:colorPrimaryDark">@android:color/black</item>
         <item name="colorAccent">@color/colorAccent</item>
-
     </style>
 
 </resources>
